--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -4,9 +4,9 @@
 }
 
 body {
-  font-family: 'Noto Sans SC', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
+  font-family: 'Noto Sans SC', Arial, 'Helvetica Neue', Helvetica, sans-serif !important;
 }
 
 code, kbd, .line-number {
-  font-family: 'CaskaydiaCove Nerd Font', Consolas, Menlo, Monaco, 'Courier New', 'Noto Sans SC', 'Helvetica Neue', Helvetica, Arial, monospace, sans-serif !important;
+  font-family: 'CaskaydiaCove Nerd Font', Consolas, monaco, 'Noto Sans SC', Arial, 'Helvetica Neue', Helvetica, monospace !important;
 }
