--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -4,9 +4,9 @@
 }
 
 body {
-  font-family: 'Noto Sans SC', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
+  font-family: 'Source Han Sans SC VF', 'Helvetica Neue', Helvetica, Arial, sans-serif !important;
 }
 
 code, kbd, .line-number {
-  font-family: 'CaskaydiaCove Nerd Font', 'Noto Sans SC', Consolas, monaco, monospace !important;
+  font-family: 'CaskaydiaCove Nerd Font', 'Source Han Sans SC VF', Consolas, monaco, monospace !important;
 }
